--- a/posts/software/kubernetes/kubernetes_notes.qmd
+++ b/posts/software/kubernetes/kubernetes_notes.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Kubernetes"
-description: "Activate the Kube"
-date: "2025-07-09"
+description: "What the hell is this? Some kind of kube?"
+date: "2025-07-10"
 categories: [Software, Engineering, DataEngineering]
 ---
 
